final-first-page

--- a/index.html
+++ b/index.html
@@ -127,7 +127,11 @@
           <a class="remove-schedule">Remover agendamento</a>
         </div>
       </section>
+
+      <button class="new-schedule">novo agendamento</button>
+
     </div>
+
 
     <script src="script.js"></script>
   </body>
