--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1>mundo pet</h1>
     </header>
 
-    <div id="container" class="blur" >
+    <div id="container">
       <div id="schedule">
         <div>
           <h2>Sua agenda</h2>
@@ -131,7 +131,7 @@
       <button class="new-schedule">novo agendamento</button>
     </div>
 
-    <div class="modal-container ">
+    <div class="modal-container hidden">
       <div id="modal">
         <h3>Agende um atendimento</h3>
         <span>Preencha os dados do cliente para realizar o agendamento</span>
